2000-03-19  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Call handle_dist after
	handle_dependencies and handle_tests.  Fixes subobj3.test and
	pr19.test regressions.

2000-03-19  Gordon Matzigkeit  <gord@fig.org>

	* depend2.am (@EXT@.o): Look for the source file in srcdir as well
	as the current directory.
	(@EXT@.lo): Likewise.

2000-03-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* automake.in (handle_data): Pass -candist instead of
	-defaultdist, for the compatibility.

2000-03-19  Tom Tromey  <tromey@cygnus.com>

	Fix for test nodepcomp.test:
	* automake.in (require_file_internal): Use readlink on symlinks.
	Only unlink file if we are going to try to add it again.
	(handle_dependencies): Require `depcomp' here.
	(scan_configure): Don't require `depcomp'.

2000-03-16  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* automake.in (handle_configure): Remove $(BUILT_SOURCES) from
	the rule to remake Makefile, whether $use_dependencies is true
	or not. This was a historical one and doesn't make sense any
	longer.

2000-03-19  Tom Tromey  <tromey@cygnus.com>

	More for PR automake/38:
	* automake.texi (Invoking Automake): Document --force-missing.
	* automake.in (force_missing): New global.
	(parse_arguments): Recognize --force-missing.
	(initialize_global_constants): Document --force-missing.
	(require_file_internal): Handle --force-missing.

	Fix for PR automake/38:
	* automake.in (require_file_internal): Check for and handle
	dangling symlinks.  Fixes symlink2.test.

	Fix for PR automake/45:
	* automake.texi (configure): Mention requirement to run
	AM_INIT_AUTOMAKE.
	(Requirements): Removed most text.
	* automake.in (seen_init_automake): New global.
	(scan_configure): Error if AM_INIT_AUTOMAKE not seen.
	(scan_one_configure_file): Don't support AM_INIT_GUILE_MODULE.
	Set seen_init_automake if needed.

	Fix for PR automake/41:
	* automake.in (require_file_found): New global.
	(require_file_internal): Set require_file_found entry.