@@ -3,7 +3,7 @@
 # @configure_input@
 
 # aclocal - create aclocal.m4 by scanning configure.in
-# Copyright (C) 1996, 1997, 1998, 1999 Free Software Foundation, Inc.
+# Copyright (C) 1996, 1997, 1998, 1999, 2000 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -177,7 +177,7 @@ sub parse_arguments
 	elsif ($arglist[0] eq '--version')
 	{
 	    print "aclocal (GNU $PACKAGE) $VERSION\n\n";
-	    print "Copyright (C) 1999 Free Software Foundation, Inc.\n";
+	    print "Copyright (C) 2000 Free Software Foundation, Inc.\n";
 	    print "This is free software; see the source for copying conditions.  There is NO\n";
 	    print "warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.\n\n";
 	    print "Written by Tom Tromey <tromey\@cygnus.com>\n";
@@ -427,7 +427,7 @@ sub write_aclocal
 	|| die "aclocal: couldn't open \`$output_file' for writing: $!\n";
     print ACLOCAL "dnl $output_file generated automatically by aclocal $VERSION\n";
     print ACLOCAL "\
-dnl Copyright (C) 1994, 1995-8, 1999 Free Software Foundation, Inc.
+dnl Copyright (C) 1994, 1995-9, 2000 Free Software Foundation, Inc.
 dnl This file is free software; the Free Software Foundation
 dnl gives unlimited permission to copy and/or distribute it,
 dnl with or without modifications, as long as this notice is preserved.
