@@ -1,5 +1,10 @@
 2000-03-19  Tom Tromey  <tromey@cygnus.com>
 
+	* aclocal.in (parse_arguments): Copyright 2000.
+	(write_aclocal): Likewise.
+	* automake.in (parse_arguments): Copyright 2000.
+	(initialize_global_constants): Likewise.
+
 	* automake.in (generate_makefile): Call handle_dist after
 	handle_dependencies and handle_tests.  Fixes subobj3.test and
 	pr19.test regressions.
